Enum user_role {
  student
  admin
}

Table users {
  id              int          [pk, increment]
  name            varchar(100) [not null]
  email           varchar(255) [not null, unique]
  hashed_password varchar(255) [not null]
  role            user_role    [not null]
  is_active       boolean      [not null, default: true]
}

Table courses {
  id        int          [pk, increment]
  title     varchar(200) [not null]
  code      varchar(50)  [not null, unique]
  capacity  int          [not null, note: 'must be > 0']
  is_active boolean      [not null, default: true]
}

Table enrollments {
  id         int         [pk, increment]
  user_id    int         [not null, ref: > users.id]
  course_id  int         [not null, ref: > courses.id]
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    (user_id, course_id) [unique, name: 'uq_enrollment_user_course']
  }
}
